# EdgeVO

./: CMakeLists.txt  README.md  idea.txt  ideas.txt  main.cpp  record.txt
Utils/: Utility.h
cmake_modules/: Findyaml-cpp.cmake
config/: config.yaml
include/CeresModel/: CeresTrack.cpp  CeresTrack.h  PoseLocalParameter.cpp  PoseLocalParameter.h
include/EdgeVO/: BackEnd.h  Camera.h  CommonInclude.h  Config.h  EdgePixel.h  Frame.h  Inputs.h  System.h  Track.h  Viewer.h
output/: Single_track.txt  track.txt
src/: BackEnd.cpp  CMakeLists.txt  Camera.cpp  EdgePixel.cpp  Frame.cpp  Inputs.cpp  System.cpp  Track.cpp  Viewer.cpp
